add js for slider

--- a/index.html
+++ b/index.html
@@ -160,88 +160,176 @@
                             </svg> -->
                         </a>
                     </div>
-                    <div class="shop">
-                        <div class="shop__col">
-                            <div class="shop-image-wrapper">
-                                <img src="./img/content/shop/silver.png" alt="headphone">
-                            </div>
-                        </div>
-                        <div class="shop__col">
-                            <div class="shop__row">
-                                <div class="shop__gears-wrapper">
-                                    <svg class="shop__gears">
-                                        <use xlink:href="./img/sprite.svg#gear"></use>
-                                    </svg>
-                                </div>
-                                <div class="shop__gears-content">
-                                    <ul class="content__info">
-                                        <li class="gear__content">
-                                            <svg class="info__icon--icon">
-                                                <use xlink:href="./img/sprite.svg#bluetooth"></use>
-                                            </svg>
-                                            <div class="info__desc">Bluetooth</div>
-                                            <div class="info__prop">4.0</div>
-                                        </li>
-                                        <li class="gear__content">
-                                            <svg class="info__icon--icon">
-                                                <use xlink:href="./img/sprite.svg#range"></use>
-                                            </svg>
-                                            <div class="info__desc">Дальность</div>
-                                            <div class="info__prop">12 м</div>
-                                        </li>
-                                        <li class="gear__content">
-                                            <svg class="info__icon--icon">
-                                                <use xlink:href="./img/sprite.svg#charger"></use>
-                                            </svg>
-                                            <div class="info__desc">Зарядка</div>
-                                            <div class="info__prop">3 ч</div>
-                                        </li>
-                                        <li class="gear__content">
-                                            <svg class="info__icon--icon">
-                                                <use xlink:href="./img/sprite.svg#weigth"></use>
-                                            </svg>
-                                            <div class="info__desc">Вес</div>
-                                            <div class="info__prop">215гр</div>
-                                        </li>
-                                        <li class="gear__content">
-                                            <svg class="info__icon--icon">
-                                                <use xlink:href="./img/sprite.svg#warranty"></use>
-                                            </svg>
-                                            <div class="info__desc">Гарантия</div>
-                                            <div class="info__prop">1 год</div>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="shop__row">
-                                    <h3 class="shop__title">beats solo 3. цвет 
-                                        «атласное серебро»</h3>
-                            </div>
-                            <div class="shop__row">
-                                <div class="shop__text">
-                                    <p>Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</p>
-                                </div>
-                            </div>
-                            <div class="shop__row">
-                                    <div class="shop__feauter-charge">
-                                        <p class="feauter__title">Зарядка</p>
-                                        <h3 class="feauter__property">2 часа</h3>
+                    <ul class="shop__list">
+                        <li class="shop__item">
+                            <div class="shop">
+                                <div class="shop__col">
+                                    <div class="shop-image-wrapper">
+                                        <img src="./img/content/shop/silver.png" alt="white headphone">
                                     </div>
-                                    <div class="shop__feauter-weight">
-                                        <p class="feauter__title">Вес</p>
-                                        <h3 class="feauter__property">215 грамм</h3>
+                                </div>
+                                <div class="shop__col">
+                                    <div class="shop__row">
+                                        <div class="shop__gears-wrapper">
+                                            <svg class="shop__gears">
+                                                <use xlink:href="./img/sprite.svg#gear"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="shop__gears-content">
+                                            <ul class="content__info">
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#bluetooth"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Bluetooth</div>
+                                                    <div class="info__prop">4.0</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#range"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Дальность</div>
+                                                    <div class="info__prop">12 м</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#charger"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Зарядка</div>
+                                                    <div class="info__prop">3 ч</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#weigth"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Вес</div>
+                                                    <div class="info__prop">215гр</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#warranty"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Гарантия</div>
+                                                    <div class="info__prop">1 год</div>
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
-                            </div>
-                            <div class="shop__row">
-                                <div class="shop__amount">
-                                    <h3>14 990 ₽</h3>
+                                    <div class="shop__row">
+                                            <h3 class="shop__title">beats solo 3. цвет 
+                                                «атласное серебро»</h3>
+                                    </div>
+                                    <div class="shop__row">
+                                        <div class="shop__text">
+                                            <p>Беспроводные наушники Beats Solo3 готовы к работе в любой момент. Включите их и поднесите к своему iPhone — они мгновенно подключатся к нему.</p>
+                                        </div>
+                                    </div>
+                                    <div class="shop__row">
+                                            <div class="shop__feauter-charge">
+                                                <p class="feauter__title">Зарядка</p>
+                                                <h3 class="feauter__property">2 часа</h3>
+                                            </div>
+                                            <div class="shop__feauter-weight">
+                                                <p class="feauter__title">Вес</p>
+                                                <h3 class="feauter__property">215 грамм</h3>
+                                            </div>
+                                    </div>
+                                    <div class="shop__row">
+                                        <div class="shop__amount">
+                                            <h3>14 990 ₽</h3>
+                                        </div>
+                                        <div class="shop__btn">
+                                            <a href="#" class="btn btn--theme--red">Заказать</a>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="shop__btn">
-                                    <a href="#" class="btn btn--theme--red">Заказать</a>
+                            </div>
+                        </li>
+                        <li class="shop__item">
+                            <div class="shop">
+                                <div class="shop__col">
+                                    <div class="shop-image-wrapper">
+                                        <img src="./img/content/shop/red.png" alt="red headphone">
+                                    </div>
+                                </div>
+                                <div class="shop__col">
+                                    <div class="shop__row">
+                                        <div class="shop__gears-wrapper">
+                                            <svg class="shop__gears">
+                                                <use xlink:href="./img/sprite.svg#gear"></use>
+                                            </svg>
+                                        </div>
+                                        <div class="shop__gears-content">
+                                            <ul class="content__info">
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#bluetooth"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Bluetooth</div>
+                                                    <div class="info__prop">4.0</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#range"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Дальность</div>
+                                                    <div class="info__prop">10 м</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#charger"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Зарядка</div>
+                                                    <div class="info__prop">2 ч</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#weigth"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Вес</div>
+                                                    <div class="info__prop">215гр</div>
+                                                </li>
+                                                <li class="gear__content">
+                                                    <svg class="info__icon--icon">
+                                                        <use xlink:href="./img/sprite.svg#warranty"></use>
+                                                    </svg>
+                                                    <div class="info__desc">Гарантия</div>
+                                                    <div class="info__prop">1 год</div>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="shop__row">
+                                            <h3 class="shop__title">beats solo pro. цвет 
+                                                «ркасный цитрус»</h3>
+                                    </div>
+                                    <div class="shop__row">
+                                        <div class="shop__text">
+                                            <p>Беспроводные наушники Solo Pro помогают настроиться на творчество. Для этого предусмотрено два режима прослушивания: режим с активным шумоподавлением и Прозрачный режим.</p>
+                                        </div>
+                                    </div>
+                                    <div class="shop__row">
+                                            <div class="shop__feauter-charge">
+                                                <p class="feauter__title">Зарядка</p>
+                                                <h3 class="feauter__property">2 часа</h3>
+                                            </div>
+                                            <div class="shop__feauter-weight">
+                                                <p class="feauter__title">Вес</p>
+                                                <h3 class="feauter__property">215 грамм</h3>
+                                            </div>
+                                    </div>
+                                    <div class="shop__row">
+                                        <div class="shop__amount">
+                                            <h3>14 990 ₽</h3>
+                                        </div>
+                                        <div class="shop__btn">
+                                            <a href="#" class="btn btn--theme--red">Заказать</a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <section class="section team-section">
@@ -616,8 +704,8 @@
             <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Контакты</a></li>
         </ul>
     </nav>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="./scr/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script src="./scr/team.js"></script>
     <script src="./scr/slider.js"></script>
     <!-- <script src="./scr/test.js"></script> -->
