--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Beats Store</title>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -693,6 +695,16 @@
         <span class="hamburger__plank plank2"></span>
         <span class="hamburger__plank plank3"></span>
     </a>
+    <div id="modal" class="modal">
+        <div class="modal__container">
+          <div class="modal__content">
+            Сообщение отправлено
+          </div>
+          <div class="modal__button-container">
+            <a href="#" class="btn app-submit-btn btn--theme--green">Закрыть</a>
+          </div>
+        </div>
+    </div>
     <nav class="menu-fullscreen">
         <ul class="menu-fullscreen__list">
             <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">О нас</a></li>
@@ -706,8 +718,11 @@
     </nav>
     <script src="./scr/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0.25/dist/fancybox.umd.min.js"></script> -->
+    <script src="./scr/jquery.fancybox.min.js"></script>
     <script src="./scr/team.js"></script>
     <script src="./scr/slider.js"></script>
+    <!-- <script src="./scr/form.js"></script> -->
     <!-- <script src="./scr/test.js"></script> -->
     <script src="./scr/fullscreen.js"></script>
     <script src="./scr/review.js"></script>
