--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                                     </div>
                                     <div class="shop__row">
                                             <h3 class="shop__title">beats solo pro. цвет 
-                                                «ркасный цитрус»</h3>
+                                                «красный цитрус»</h3>
                                     </div>
                                     <div class="shop__row">
                                         <div class="shop__text">
