--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Beats Store</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css" integrity="sha512-nNlU0WK2QfKsuEmdcTwkeh+lhGs6uyOxuUs+n+0oXSYDok5qy0EI0lt01ZynHq6+p/tbgpZ7P+yUb+r71wqdXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="main.min.css">
 </head>
 
 <body>
@@ -715,16 +715,19 @@
             <li class="menu-fullscreen__item"><a href="#" class="menu-fullscreen__link">Контакты</a></li>
         </ul>
     </nav>
-    <script src="./scr/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
+    
+    <!-- <script src="./scr/jquery-3.6.0.min.js"></script> -->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script> -->
+    <script src="main.min.js"></script>
     <!-- <script src="./scr/jquery.fancybox.min.js"></script> -->
-    <script src="./scr/team.js"></script>
+    <!-- <script src="./scr/team.js"></script>
     <script src="./scr/slider.js"></script>
-    <script src="./scr/modal.js"></script>
+    <script src="./scr/modal.js"></script> -->
     <!-- <script src="./scr/test.js"></script> -->
-    <script src="./scr/fullscreen.js"></script>
-    <script src="./scr/review.js"></script>
+    <!-- <script src="./scr/fullscreen.js"></script>
+    <script src="./scr/review.js"></script> -->
 </body>
 
 </html>
